# MagentaRapidsCore

./: pyproject.toml  structurizr.users
.github/workflows/: lint-test.yml
docs/: run_lite  run_workspace  structurizr.properties  structurizr.users
docs/.structurizr/index/: _0.cfe  _0.cfs  _0.si  segments_1
docs/1/: workspace-20230910165213000.json  workspace.json  workspace.properties
docs/dsl/: workspace.dsl  workspace.json
docs/dsl/.structurizr/index/: _0.cfe  _0.cfs  _0.si  segments_1
docs/index/: _0.cfe  _0.cfs  _0.si  _1.cfe  _1.cfs  _1.si  _2.cfe  _2.cfs  _2.si  _3.cfe  _3.cfs  _3.si  _4.cfe  _4.cfs  _4.si  _5.cfe  _5.cfs  _5.si  _6.cfe  _6.cfs  _6.si  _7.cfe  _7.cfs  _7.si  segments_8
magenta_rapids/: _decorators.py  backends.py  cli.py  decorators.py  environment.py  file_utilities.py  mutators.py  validators.py
magenta_rapids/schema/: message.py
tests/: cli_smoke_test  test_backends.py  test_environment.py  test_sample.py
