[tool.poetry]
name = "magentarapidscore"
version = "0.1.0"
description = "core library for Magenta Rapids"
authors = ["Aaron Grisez <aaron@aarongrisez.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pydantic = "^2.3.0"
mido = "^1.3.0"
python-rtmidi = ">=1.5.4,<1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.17.5"
Sphinx = "^7.2.5"
wheel = "^0.41.2"
pytest-runner = "^6.0.0"
colorama = "^0.4.6"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
